[build-system]
requires = [
    "setuptools>=42",
    "setuptools_scm>=6.2",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
root = "../../"
git_describe_command = "git describe --dirty --tags --long --match clients-python-*.*.*"
tag_regex = '''^clients-python-(?P<version>[\.0-9]+)$'''
